# limit-order-api

./: README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
alembic/: env.py
alembic/versions/: 1b8ed2d7decd_trade_migration.py  ad5c3a759631_order_migration.py
limit_order_api/: db.py  main.py  models.py  routes.py
tests/: delete_order_test.py  docs_test.py  fetch_all_orders_test.py  fetch_order_test.py  modify_order_test.py  place_order_test.py
