[tool.poetry]
name = "limit-order-api"
version = "0.1.0"
description = "API to demonstrate limit order book functionality"
authors = ["Abhishek Keshri <iam2kabhishek@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
dev = "limit_order_api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
