[tool.poetry]
name = "limit-order-api"
version = "0.1.0"
description = "API to demonstrate limit order book functionality"
authors = ["Abhishek Keshri <iam2kabhishek@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.29"
databases = "^0.9.0"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
pydantic = "^2.6.4"

[tool.poetry.scripts]
dev = "limit_order_api.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
